--- a/.prettierc.json
+++ b/.prettierc.json
@@ -1,12 +1,12 @@
 {
   "printWidth": 100,
   "tabWidth": 2,
-  "useTabs": false,
+  "useTabs": true,
   "semi": true,
   "singleQuote": true,
   "trailingComma": "es5",
   "bracketSpacing": true,
   "jsxBracketSameLine": false,
-  "arrowParens": "avoid",
+  "arrowParents": "avoid",
   "proseWrap": "always"
 }
